--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -5,13 +5,13 @@
 	    <meta charset="utf-8">
     	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
 		<link rel="stylesheet" href="/stylesheets/style.css">
 		<link rel="stylesheet" href="/stylesheets/bootstrap-markdown.min.css">
 		<link rel="stylesheet" href="/stylesheets/bootstrap-switch.min.css">
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" href="/stylesheets/font-awesome.min.css">
+		<script src="/javascripts/jquery-2.1.4.min.js"></script>
+		<script src="/javascripts/bootstrap.min.js"></script>
 		<script src="/javascripts/form_validation.js"></script>
 		<script src="/javascripts/bootstrap-markdown.js"></script>
 		<script src="/javascripts/bootstrap-switch.min.js"></script>
