--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -53,50 +53,52 @@
 	<body>	
 		<!-- Static navbar -->
 	    <nav id="custom-bootstrap-menu" class="navbar navbar-default navbar-static-top">
-	      <div class="container">
-	        <div class="navbar-header">
-	          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-	            <span class="sr-only">Toggle navigation</span>
-	            <span class="icon-bar"></span>
-	            <span class="icon-bar"></span>
-	            <span class="icon-bar"></span>
-	          </button>
-	          <a class="navbar-brand" href="/">{{config.settings.website_title}}</a>
-	        </div>
-	        <div id="navbar" class="navbar-collapse collapse">
-	          <ul class="nav navbar-nav">
-	            <li><a href="/calendar"></a></li>
-	            <li><a href="/user"></a></li>
-	          </ul>
-			  <ul class="nav navbar-nav navbar-right">
-				{{#if session.user}}
-					{{#if result._id}}
-						<li><a href="/edit/{{result._id}}">Edit</a></li>
-					{{/if}}
-					<li class="dropdown">
-			        	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Users <span class="caret"></span></a>
-			          	<ul class="dropdown-menu">
-				            <li><a href="/users/new">New</a></li>
-				            <li><a href="/users">Edit</a></li>
-							<li><a href="/user/edit/{{session.user_id}}">My account</a></li>
-			          	</ul>
-			        </li>
-					<li class="dropdown">
-			        	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Articles <span class="caret"></span></a>
-			          	<ul class="dropdown-menu">
-				            <li><a href="/insert">New</a></li>
-				            <li><a href="/articles">Edit</a></li>
-			          	</ul>
-			        </li>
-					<li><a href="/logout">Logout</a></li>
-				{{else}}
-					<li><a href="/login">Login</a></li>
-				{{/if}}	
-      		  </ul>
-	        </div><!--/.nav-collapse -->
+			<div class="container-fluid">
+				<div class="col-md-10 col-md-offset-1">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<a class="navbar-brand" href="/">{{config.settings.website_title}}</a>
+					</div>
+					<div id="navbar" class="navbar-collapse collapse">
+						<ul class="nav navbar-nav">
+							<li><a href="/calendar"></a></li>
+							<li><a href="/user"></a></li>
+						</ul>
+						<ul class="nav navbar-nav navbar-right">
+							{{#if session.user}}
+								{{#if result._id}}
+									<li><a href="/edit/{{result._id}}">Edit</a></li>
+								{{/if}}
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Users <span class="caret"></span></a>
+									<ul class="dropdown-menu">
+										<li><a href="/users/new">New</a></li>
+										<li><a href="/users">Edit</a></li>
+										<li><a href="/user/edit/{{session.user_id}}">My account</a></li>
+									</ul>
+								</li>
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Articles <span class="caret"></span></a>
+									<ul class="dropdown-menu">
+										<li><a href="/insert">New</a></li>
+										<li><a href="/articles">Edit</a></li>
+									</ul>
+								</li>
+								<li><a href="/logout">Logout</a></li>
+							{{else}}
+								<li><a href="/login">Login</a></li>
+							{{/if}}	
+						</ul>
+					</div>
+	      		</div>
 	      </div>
 	    </nav>	
-		<div class="container">
+		<div class="container-fluid">
 			{{{body}}}
 		</div>
 	</body>
