fixed issue: https://github.com/mrvautin/openKB/issues/4

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
 <div class="row">
-	<form action="search" method="post">
+	<form action="/search" method="post">
 	<div class="col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
 		<div class="input-group">
   			<input type="text" name="frm_search" class="form-control input-lg" placeholder="Search the knowledge base">
