--- a/views/kb.hbs
+++ b/views/kb.hbs
@@ -1,13 +1,13 @@
 <div class="row">
-	<form action="search" method="post">
-	<div class="col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
-		<div class="input-group">
-  			<input type="text" name="frm_search" class="form-control input-lg" placeholder="Search the knowledge base">
-  			<span class="input-group-btn">
-    			<button class="btn btn-primary btn-lg" type="submit">Search</button>
-  			</span>
+	<form action="/search" method="post">
+		<div class="col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
+			<div class="input-group">
+				<input type="text" name="frm_search" class="form-control input-lg" placeholder="Search the knowledge base">
+				<span class="input-group-btn">
+					<button class="btn btn-primary btn-lg" type="submit">Search</button>
+				</span>
+			</div>
 		</div>
-	</div>
 	</form>
 </div>
 <div class="row">
