--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -44,7 +44,7 @@
 				<div class="col-xs-8 col-sm-10 col-md-10 col-lg-11">
 					<div class="form-group">
 						<label>Keywords</label><br/>
-						<input type="text" minlength="3" class="form-control" name="frm_kb_keywords" id="frm_kb_keywords" value="{{result.kb_keywords}}" required>
+						<input type="text" class="form-control" name="frm_kb_keywords" id="frm_kb_keywords" value="{{result.kb_keywords}}">
 					</div>
 				</div>
 				<div class="col-xs-4 col-sm-2 col-md-2 col-lg-1">
@@ -66,7 +66,8 @@
 		</form>
 	</div>
 	{{#if editor}}
-		<script src="/javascripts/showdown.min.js"></script>
+		<script src="/javascripts/bootstrapTagger.js"></script>
+		<script src="/javascripts/markdown-it.min.js"></script>
 		<script src="/javascripts/markdown-editor.js"></script>
 	{{/if}}
 </div>
