Changes to "files" route. Added alpha sorting, ability to create new directory and pick directory to upload to.
Note: Changed "/public/images" to "/public/uploads" as not just images should be uploaded. Can simply copy all files and folders or rename from "/public/images" to "/public/uploads".

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -167,6 +167,11 @@ footer {
     text-decoration: none;
 }
 
+.file-form{
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
 .editor_btn_action{
     border-top-left-radius: 4px !important; 
     border-bottom-left-radius: 4px !important;
