--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,3 +1,7 @@
-<h1>{{message}}</h1>
-<h2>{{error.status}}</h2>
-<pre>{{error.stack}}</pre>
+<div class="col-md-12">
+	<div class="row">
+		<div class="col-md-6 col-md-offset-3">
+			<h1 class="text-center">{{message}}</h1>
+		</div>
+	</div>
+</div>
