--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -55,6 +55,9 @@
 							</li>
 							<li><a href="/logout">Logout</a></li>
 						{{else}}
+							{{#if config.settings.suggest_allowed}}
+								<li><a href="/suggest">Suggest</a></li>
+							{{/if}}
 							<li><a href="/login">Login</a></li>
 						{{/if}}	
 					</ul>
