--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,12 @@
 <div class="row">
+	{{#if message}}
+		<div class="col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
+			<div class="alert alert-{{ message_type}} alert-dismissable">
+				<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+				{{message}}
+			</div>
+		</div>
+	{{/if}}
 	<form action="/search" method="post">
 	<div class="col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
 		<div class="input-group">
