- Added export functionality to ".md" files via the "Article > Export" menu. Files are served to the browser as a zip. File names are the article title and contents is the article body - Stumbled across a bug allowing the editing of KB's without being logged in... whoops

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -51,6 +51,7 @@
 									<li><a href="/insert">New</a></li>
 									<li><a href="/articles">Edit</a></li>
 									<li><a href="/files">Files</a></li>
+									<li><a href="/export">Export</a></li>
 								</ul>
 							</li>
 							<li><a href="/logout">Logout</a></li>
