--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,69 +1,84 @@
-<div class="col-md-10 col-md-offset-1">
+<div class="col-xs-12 col-md-10 col-md-offset-1">
 	<div class="row">
-		{{#if message}}
-			<div class="alert alert-{{ message_type}} alert-dismissable">
-				<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-				{{message}}
-			</div>
-		{{/if}}
-		<form method="post" id="edit_form" action="/save_kb">
-			<input type="hidden" name="frm_kb_id" value="{{result._id}}" />
-			<div id="header row">
-				<div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
-					<div class="form-group">
-						<label for="preview">Article title</label><br/>
-						<input type="text" name="frm_kb_title" class="form-control input-normal" minlength="5" maxlength="200" value="{{result.kb_title}}" required/>
-						<p class="help-block val-error"></p>
-					</div>
+		<div class="col-lg-12">
+			{{#if message}}
+				<div class="alert alert-{{ message_type}} alert-dismissable">
+					<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+					{{message}}
 				</div>
-				<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
-					<label for="preview">Status</label><br/>
-					<div class="input-group">
-						<input id="frm_kb_published" class="form-control" name="frm_kb_published" type="checkbox" data-size="medium" data-on-color="success" data-off-color="danger" {{checked_state result.kb_published}}/>
-						<div class="input-group-btn">
-							<button id="frm_edit_kb_save" class="btn btn-success editor_btn_action" type="submit">Save <i class="fa fa-floppy-o"></i></button>
+			{{/if}}
+			<form method="post" id="edit_form" action="/save_kb">
+				<input type="hidden" name="frm_kb_id" value="{{result._id}}" />
+				<div id="header">
+					<div class="col-lg-12">
+						<div class="col-xs-12 col-lg-6">
+							<div class="form-group">
+								<label for="frm_kb_title">Article title</label><br/>
+								<input type="text" name="frm_kb_title" class="form-control input-normal" minlength="5" maxlength="200" value="{{result.kb_title}}" required/>
+								<p class="help-block val-error"></p>
+							</div>
+						</div>
+						<div class="col-xs-12 col-sm-5 col-md-5 col-lg-2">
+							<label for="frm_kb_password">Password</label><br/>
+							<input id="frm_kb_password" class="form-control" name="frm_kb_password" type="text" value="{{result.kb_password}}" />
+						</div>
+						<div class="col-xs-12 col-sm-5 col-md-5 col-lg-2">
+							<label for="frm_kb_published">Status</label><br/>
+							<div class="input-group">
+								<input id="frm_kb_published" class="form-control" name="frm_kb_published" type="checkbox" data-size="medium" data-on-color="success" data-off-color="danger" {{checked_state result.kb_published}}/>
+							</div>
+						</div>
+						<div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+							<label for="frm_kb_published">&nbsp;</label><br/>
+							<div class="input-group-btn">
+								<button id="frm_edit_kb_save" class="btn btn-success editor_btn_action pull-left" type="submit">Save <i class="fa fa-floppy-o"></i></button>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			<div id="editor-pagewrapper row">
-				<div class="col-xs-12 col-md-6">
-					<div class="form-group" id="editor-wrapper">
-						<label for="editor">Article body (Markdown)</label>
-						<textarea id="editor" minlength="5" name="frm_kb_body" class="form-control" required>{{{result.kb_body}}}</textarea>
-					</div>
-				</div>
-				<div class="col-xs-12 col-md-6">
-					<div class="form-group" id="preview-wrapper">
-						<label for="preview">Preview</label>
-						<div id="preview" name="preview" class="form-control" rows="10"></div>
-					</div>
-				</div>
-			</div>
-			<footer>
-				<div class="col-xs-8 col-sm-10 col-md-10 col-lg-11">
-					<div class="form-group">
-						<label>Keywords</label><br/>
-						<input type="text" class="form-control" name="frm_kb_keywords" id="frm_kb_keywords" value="{{result.kb_keywords}}">
-					</div>
-				</div>
-				<div class="col-xs-4 col-sm-2 col-md-2 col-lg-1">
-					<div class="form-group pull-right">
-						<label>Settings</label><br/>
-						<div class="btn-group dropup pull-right">
-							<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-								<i class="fa fa-cog"></i>
-								<span class="sr-only"></span>
-							</button>
-							<ul class="dropdown-menu dropdown-menu-right">
-								<li class="dropup-list"><a class="btn btn-warning dropup-button" target="_blank" href="/kb/{{result._id}}">Preview</a></li>
-								<li class="dropup-list"><a class="btn btn-danger dropup-button" href="/delete/{{result._id}}" id="del_post" onclick="return confirm('Are you sure you want to delete this article?');">Delete</a></li>
-							</ul>
+				<div id="editor-pagewrapper">
+					<div class="col-lg-12">
+						<div class="col-xs-12 col-md-12 col-lg-6">
+							<div class="form-group" id="editor-wrapper">
+								<label for="editor">Article body (Markdown)</label>
+								<textarea id="editor" minlength="5" name="frm_kb_body" class="form-control" required>{{{result.kb_body}}}</textarea>
+							</div>
+						</div>
+						<div class="col-xs-12 col-md-12 col-lg-6">
+							<div class="form-group" id="preview-wrapper">
+								<label for="preview">Preview</label>
+								<div id="preview" name="preview" class="form-control" rows="10"></div>
+							</div>
 						</div>
 					</div>
 				</div>
-			</footer>
-		</form>
+				<footer>
+					<div class="col-lg-12">
+						<div class="col-xs-8 col-sm-10 col-md-10 col-lg-11">
+							<div class="form-group">
+								<label>Keywords</label><br/>
+								<input type="text" class="form-control" name="frm_kb_keywords" id="frm_kb_keywords" value="{{result.kb_keywords}}">
+							</div>
+						</div>
+						<div class="col-xs-4 col-sm-2 col-md-2 col-lg-1">
+							<div class="form-group pull-right">
+								<label>Settings</label><br/>
+								<div class="btn-group dropup pull-right">
+									<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+										<i class="fa fa-cog"></i>
+										<span class="sr-only"></span>
+									</button>
+									<ul class="dropdown-menu dropdown-menu-right">
+										<li class="dropup-list"><a class="btn btn-warning dropup-button" target="_blank" href="/kb/{{result._id}}">Preview</a></li>
+										<li class="dropup-list"><a class="btn btn-danger dropup-button" href="/delete/{{result._id}}" id="del_post" onclick="return confirm('Are you sure you want to delete this article?');">Delete</a></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</footer>
+			</form>
+		</div>
 	</div>
 	{{#if editor}}
 		<script src="/javascripts/bootstrapTagger.js"></script>
