--- a/views/protected_kb.hbs
+++ b/views/protected_kb.hbs
@@ -8,7 +8,8 @@
 	
 	<form class="form-signin" action="/protected/action" method="post" role="form">
 		<input type="hidden" name="frm_referring_url" value="{{referring_url}}">
-		<h2 class="form-signin-heading">This page is protected. Please enter the password.</h2>
+		<h2 class="form-signin-heading" div align="center">This article is locked</h2>
+		<h4 div align="center">Please enter the password to gain access</h4>
 		<div class="form-group">
 			<input type="password" name="password" class="form-control" placeholder="Password" value="" required>
 			<input type="hidden" name="kb_id" value="{{result._id}}" required>
