- Added support for Mermaid charting engine - https://github.com/knsv/mermaid

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -11,11 +11,13 @@
 		<link rel="stylesheet" href="/stylesheets/bootstrap-switch.min.css">
 		<link rel="stylesheet" href="/stylesheets/font-awesome.min.css">
 		<link rel="stylesheet" href="/stylesheets/bootstrapTagger.css">
+		<link rel="stylesheet" href="/stylesheets/mermaid.css">
 		<script src="/javascripts/jquery-2.1.4.min.js"></script>
 		<script src="/javascripts/bootstrap.min.js"></script>
 		<script src="/javascripts/jqBootstrapValidation.js"></script>
 		<script src="/javascripts/bootstrap-markdown.js"></script>
 		<script src="/javascripts/bootstrap-switch.min.js"></script>
+		<script src="/javascripts/mermaid.min.js"></script>
 		<script src="/javascripts/functions.js"></script>
 	</head>
 	<body>	
