- Added some cool markdown stuff in the form of "markdown-it-classy". This gives the ability to use built in Bootstrap classes in your markdown by surrounding the class for the block of text in {} brackets. The class needs to be at the end of the block of text it is to be applied to. Eg: Danger message {bg-danger}

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -18,6 +18,7 @@
 		<script src="/javascripts/bootstrap-markdown.js"></script>
 		<script src="/javascripts/bootstrap-switch.min.js"></script>
 		<script src="/javascripts/mermaid.min.js"></script>
+		<script src="/javascripts/markdown-it-classy.js"></script>
 		<script src="/javascripts/functions.js"></script>
 	</head>
 	<body>	
