This release has some potential breaking changes.
Features include;

- Better handling of sessions
- Optional KB permalinks
- Optimized code
- Redesigned notifications
- Admin article filtering for editing
- Fixed login redirect
- Various other fixes

Raise any issues for bugs.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,47 +1,3 @@
-td{width:14%}
-
-.calendar-day{height: 110px;}
-
-.jumbotron{
-	background-color: #ffffff;
-	margin-bottom: 0px;
-	padding-top: 25px;
-}
-.jumbotron h1{
-	font-size: 35pt;
-}
-
-#map-canvas{
-	width: 100%;
-	height: 400px;
-}
-
-.google-map{
-	padding-bottom: 15px;
-}
-
-.event_body{
-	font-size: 13pt;
-}
-
-.pagination_month{
-	width: 95px;
-	text-align: center;
-}
-
-.cal-header{
-  height: 20px;
-}
-
-.seven-cols{
-	width: 100%;
-}
-
-.cal-col {
-  height: 100px;
-  width: 14.285714285714285714285714285714%;
-  *width: 14.285714285714285714285714285714%;
-}
 
 .val-error{
 	color: #d9534f;
@@ -59,111 +15,69 @@ td{width:14%}
     #editor-wrapper {
         padding-top: 20px;
     }
-    
-    
-    
+
     #frm_edit_kb_save, #frm_kb_published{
         float:right;
     }
 }
 
-.btn-primary:hover{
-    background-color: #c71e1e;
-    border-color: #c71e1e;
-}
-
-.btn-primary.active, .btn-primary:active, .btn-primary:focus, .btn-primary.focus {
-    background-color: #c71e1e !important;
-    border-color: #c71e1e !important;
-}
-
-.btn-primary{
-    background-color: #d62828;
-    border-color: #c71e1e;
-}
-
-a {
-    color: #d62828
-}
-
-a:hover {
-    color: #c71e1e;
-}
-
-#custom-bootstrap-menu.navbar-default .navbar-brand {
-    color: #d62828;
-}
-#custom-bootstrap-menu.navbar-default {
-    font-size: 14px;
-    background-color: rgba(248, 248, 248, 1);
-    border-width: 1px;
-    border-radius: 4px;
-}
-#custom-bootstrap-menu.navbar-default .navbar-nav>li>a {
-    color: rgba(119, 119, 119, 1);
-    background-color: rgba(248, 248, 248, 0);
-}
-#custom-bootstrap-menu.navbar-default .navbar-nav>li>a:hover,
-#custom-bootstrap-menu.navbar-default .navbar-nav>li>a:focus {
-    color: rgba(214, 40, 40, 1);
-    background-color: rgba(240, 240, 240, 1);
-}
-#custom-bootstrap-menu.navbar-default .navbar-nav>.active>a,
-#custom-bootstrap-menu.navbar-default .navbar-nav>.active>a:hover,
-#custom-bootstrap-menu.navbar-default .navbar-nav>.active>a:focus {
-    color: rgba(255, 255, 255, 1);
-    background-color: rgba(214, 40, 40, 1);
-}
-#custom-bootstrap-menu.navbar-default .navbar-toggle {
-    border-color: #d62828;
-}
-#custom-bootstrap-menu.navbar-default .navbar-toggle:hover,
-#custom-bootstrap-menu.navbar-default .navbar-toggle:focus {
-    background-color: #d62828;
-}
-#custom-bootstrap-menu.navbar-default .navbar-toggle .icon-bar {
-    background-color: #d62828;
-}
-#custom-bootstrap-menu.navbar-default .navbar-toggle:hover .icon-bar,
-#custom-bootstrap-menu.navbar-default .navbar-toggle:focus .icon-bar {
-    background-color: #f8f8f8;
-}
-
 html, body {
-  height: 100%;
+    font-size: 16px;
 }
+
+html{
+    position: relative;
+    min-height: 100%;
+}
+
 #header {        
     height: 50px;
 }
 
+.view_count{
+    font-size: 14px;
+}
+
 #editor, #preview {
-    height: calc(100vh - 135px - 135px);
+    height: calc(100vh - 135px - 175px);
     overflow: auto;
 }
 
 #editor-pagewrapper {
-    height: calc(100vh - 100px - 100px);
+    height: calc(100vh - 100px - 135px);
 }
-footer { 
-    height: 50px;
+
+.show_footer{
+    margin-bottom: 60px;
+}
+
+.tokenfield .token .close{
+    color: black;
+}
+
+.search_bar{
+    margin-top: 10px;
 }
 
 .dropup-button{
     height: 34px;
     padding: 0px;
+    color: white !important;
 }
 
 .dropdown-menu>li>a{
     padding-top: 5px !important;
+    
 }
 
-.imgPreview{
-    color: #d62828;
+.pad-bottom{
+    padding-bottom: 25px;
 }
 
-.imgPreview:link, .imgPreview:hover, .imgPreview:active, .imgPreview:visited{
-    color: #d62828;
-    text-decoration: none;
+.keywords{
+    padding-bottom: 30px;
+    padding-top: 20px;
+    font-size: 19px;
 }
 
 .file-form{
@@ -181,4 +95,56 @@ footer {
     margin-right: 10px;
     margin-left: 10px;
     margin-top: 10px;
+}
+
+#notify_message{
+    position: fixed;
+    display: none;
+    z-index: 9999;
+    padding-top: 10px;
+    height: 50px;
+    bottom: 0px; 
+    width: 100%; 
+    text-align: center;
+    font-size: 22px;
+    color: white;
+}
+
+.notify_message-success{
+    background-color: #18bc9c;
+}
+
+.notify_message-danger{
+    background-color: #e74c3c;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    text-align: center;
+    padding-top: 15px;
+    margin-top: 35px;
+    background-color: #f5f5f5;
+}
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
 }
