--- a/views/articles.hbs
+++ b/views/articles.hbs
@@ -6,19 +6,48 @@
 	 			<li class="active">Articles</li>
 			</ol>
 			<h1>Articles</h1>
-			<ul class="list-group">
-				<li class="list-group-item">
-					<span class="pull-right"><strong>Published</strong></span>
-			    	<strong>Article</strong>
-		  		</li>
-				{{#each articles}}
-				  	<li class="list-group-item">
-						<span class="pull-right" style="padding-left: 10px;"><a href="delete/{{this._id}}" onclick="return confirm('Are you sure you want to delete this article?');"> <i class="fa fa-trash-o"></i></a></span>
-				    	<span class="pull-right"><input id="{{this._id}}" class="published_state" type="checkbox" data-size="mini" data-on-color="success" data-off-color="danger" {{checked_state this.kb_published}}></span>
-				    	<a href="/edit/{{this._id}}">{{this.kb_title}}</a>
-			  		</li>
-				{{/each}}
-			</ul>
+			<div class="col-lg-12 search_bar pad-bottom">
+				<div class="input-group">
+					<input type="text" name="article_filter" id="article_filter" class="form-control input-lg" placeholder="Filter articles">
+					<span class="input-group-btn">
+						<button class="btn btn-success btn-lg" id="btn_articles_filter">Filter</button>
+						<button class="btn btn-warning btn-lg" id="btn_articles_reset">Reset</button>
+					</span>
+				</div>
+			</div>
+			{{#if results}}
+				<div class="col-lg-12">
+					<ul class="list-group">
+						<li class="list-group-item">
+							<span class="pull-right"><strong>Published</strong></span>
+							<strong>Articles - <span class="text-danger">Filtered term: {{search_term}} </span></strong>
+						</li>
+						{{#each results}}
+							<li class="list-group-item">
+								<h4 class="pull-right" style="padding-left: 10px;"><a href="delete/{{this._id}}" onclick="return confirm('Are you sure you want to delete this article?');"> <i class="fa fa-trash-o"></i></a></h4>
+								<h4 class="pull-right"><input id="{{this._id}}" class="published_state" type="checkbox" {{checked_state this.kb_published}}></h4>
+								<h5><a href="/edit/{{this._id}}">{{this.kb_title}}</a></h5>
+							</li>
+						{{/each}}
+					</ul>
+				</div>
+			{{else}}
+				<div class="col-lg-12">
+					<ul class="list-group">
+						<li class="list-group-item">
+							<span class="pull-right"><strong>Published</strong></span>
+							<strong>Article - Recent</strong>
+						</li>
+						{{#each articles}}
+							<li class="list-group-item">
+								<h4 class="pull-right" style="padding-left: 10px;"><a href="delete/{{this._id}}" onclick="return confirm('Are you sure you want to delete this article?');"> <i class="fa fa-trash-o"></i></a></h4>
+								<h4 class="pull-right"><input id="{{this._id}}" class="published_state" type="checkbox" {{checked_state this.kb_published}}></h4>
+								<h5><a href="/edit/{{this._id}}">{{this.kb_title}}</a></h5>
+							</li>
+						{{/each}}
+					</ul>
+				</div>
+			{{/if}}
 		</div>
 	</div>
 </div>
