--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,19 +1,12 @@
 <div class="col-xs-12 col-md-10 col-md-offset-1">
 	<div class="row">
 		<div class="col-lg-12">
-			{{#if message}}
-				<div class="alert alert-{{ message_type}} alert-dismissable">
-					<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-					{{message}}
-				</div>
-			{{/if}}
 			<form method="post" id="edit_form" action="/save_kb">
-				<input type="hidden" name="frm_kb_id" value="{{result._id}}" />
 				<div id="header">
 					<div class="col-lg-12">
 						<div class="col-xs-12 col-lg-6">
 							<div class="form-group">
-								<label for="frm_kb_title">Article title</label><br/>
+								<label for="frm_kb_title">Article title *</label><br/>
 								<input type="text" name="frm_kb_title" class="form-control input-normal" minlength="5" maxlength="200" value="{{result.kb_title}}" required/>
 								<p class="help-block val-error"></p>
 							</div>
@@ -22,16 +15,23 @@
 							<label for="frm_kb_password">Password</label><br/>
 							<input id="frm_kb_password" class="form-control" name="frm_kb_password" type="text" value="{{result.kb_password}}" />
 						</div>
-						<div class="col-xs-12 col-sm-5 col-md-5 col-lg-2">
+						<div class="col-xs-6 col-sm-5 col-md-5 col-lg-2">
 							<label for="frm_kb_published">Status</label><br/>
-							<div class="input-group">
-								<input id="frm_kb_published" class="form-control" name="frm_kb_published" type="checkbox" data-size="medium" data-on-color="success" data-off-color="danger" {{checked_state result.kb_published}}/>
-							</div>
+							<select class="form-control" id="frm_kb_published" name="frm_kb_published">
+								{{#ifCond result.kb_published "==" "true"}}
+									<option value="true" selected>Published</option>
+									<option value="false">Draft</option>
+								{{/ifCond}}
+								{{#ifCond result.kb_published "==" "false"}}
+									<option value="true">Published</option>
+									<option value="false" selected>Draft</option>
+								{{/ifCond}}
+							</select>
 						</div>
-						<div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+						<div class="col-xs-6 col-sm-2 col-md-2 col-lg-2">
 							<label for="frm_kb_published">&nbsp;</label><br/>
 							<div class="input-group-btn">
-								<button id="frm_edit_kb_save" class="btn btn-success editor_btn_action pull-left" type="submit">Save <i class="fa fa-floppy-o"></i></button>
+								<button id="frm_edit_kb_save" class="btn btn-success editor_btn_action pull-right" type="submit">Save <i class="fa fa-floppy-o"></i></button>
 							</div>
 						</div>
 					</div>
@@ -40,7 +40,7 @@
 					<div class="col-lg-12">
 						<div class="col-xs-12 col-md-12 col-lg-6">
 							<div class="form-group" id="editor-wrapper">
-								<label for="editor">Article body (Markdown)</label>
+								<label for="editor">Article body (Markdown) *</label>
 								<textarea id="editor" minlength="5" name="frm_kb_body" class="form-control" required>{{{result.kb_body}}}</textarea>
 							</div>
 						</div>
@@ -54,13 +54,27 @@
 				</div>
 				<footer>
 					<div class="col-lg-12">
-						<div class="col-xs-8 col-sm-10 col-md-10 col-lg-11">
+						<div class="col-xs-8 col-sm-10 col-md-6 col-lg-6">
 							<div class="form-group">
 								<label>Keywords</label><br/>
 								<input type="text" class="form-control" name="frm_kb_keywords" id="frm_kb_keywords" value="{{result.kb_keywords}}">
 							</div>
 						</div>
-						<div class="col-xs-4 col-sm-2 col-md-2 col-lg-1">
+						<div class="col-xs-8 col-sm-10 col-md-6 col-lg-4">
+							<div class="form-group">
+								<label>Permalink (takes preference over the ID based link)</label><br/>
+								<div class="input-group">
+									<input type="text" class="form-control" name="frm_kb_permalink" id="frm_kb_permalink" value="{{result.kb_permalink}}">
+									<span class="input-group-btn">
+										<button class="btn btn-success" id="validate_permalink" type="button">Validate</button>
+									</span>
+									<span class="input-group-btn">
+										<button class="btn btn-warning" id="generate_permalink" type="button">Generate</button>
+									</span>
+								</div>
+							</div>
+						</div>
+						<div class="col-xs-4 col-sm-2 col-md-6 col-lg-2">
 							<div class="form-group pull-right">
 								<label>Settings</label><br/>
 								<div class="btn-group dropup pull-right">
@@ -77,11 +91,11 @@
 						</div>
 					</div>
 				</footer>
+				<input type="hidden" name="frm_kb_id" id="frm_kb_id" value="{{result._id}}" />
 			</form>
 		</div>
 	</div>
 	{{#if editor}}
-		<script src="/javascripts/bootstrapTagger.js"></script>
 		<script src="/javascripts/markdown-it.min.js"></script>
 		<script src="/javascripts/markdown-editor.js"></script>
 	{{/if}}
