--- a/views/files.hbs
+++ b/views/files.hbs
@@ -1,12 +1,6 @@
 <div class="col-md-12">
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
-			{{#if message}}
-				<div class="alert alert-{{ message_type}} alert-dismissable">
-					<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-					{{message}}
-				</div>
-			{{/if}}
 			<ol class="breadcrumb">
 	  			<li><a href="/">Home</a></li>
 	 			<li class="active">Files</li>
@@ -15,7 +9,9 @@
 			<div class="col-md-12">
 				<form class="form-horizontal" role="form" method="post" action="/file/upload" enctype="multipart/form-data">
 					<div class="form-group file-form">
-						<input type="file" name="upload_file" class="form-control" id="upload_file">
+						<span class="btn btn-info btn-file">
+							Select file<input type="file" name="upload_file" id="upload_file">
+						</span>
 					</div>
 					<div class="form-group file-form">
 						<label for="custom_dir">Upload directory</label>
@@ -26,24 +22,25 @@
 						</select>
 					</div>
 					<div class="form-group file-form">
-						<button type="submit" class="btn btn-primary pull-right">Upload file</button>
+						<button type="submit" class="btn btn-success pull-right">Upload file</button>
 					</div>
 					<ul class="list-group">
 						{{#each files}}
 							<li class="list-group-item" id="file-{{this.id}}">
 								<span><i class="fa fa-file-image-o"></i></span>
 								<span class="align-left"><a class="imgPreview" href="{{this.path}}" target="_blank">{{this.path}}</a></span>
-								<span class="pull-right" style="padding-left: 10px;"><button class="btn btn-primary btn-xs" onclick="file_delete_confirm('{{this.path}}','{{this.id}}')"><i class="fa fa-trash-o"></i></button></span>
+								<span class="pull-right" style="padding-left: 10px;"><button class="btn btn-danger btn-xs" onclick="file_delete_confirm('{{this.path}}','{{this.id}}')"><i class="fa fa-trash-o"></i></button></span>
 							</li>
 						{{/each}}
 					</ul>
+					<p class="text-warning">Tip: To insert an image right click the link, copy the link address and add it to your Markdown</p>
 				</form>
 				<form class="form-horizontal" role="form" method="post" action="/file/new_dir">
 					<label for="directory">New directory</label>
 					<div class="input-group">
 						<input type="text" class="form-control" name="custom_dir" id="custom_dir" placeholder="new/directory">
 						<span class="input-group-btn">
-							<button class="btn btn-primary" type="submit">Create</button>
+							<button class="btn btn-success" type="submit">Create</button>
 						</span>
 					</div>
 					<p class="help-block">Multiple directories can be created using a "/" seporator</p>
