--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,21 +1,13 @@
 <div class="row">
-	{{#if message}}
-		<div class="col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
-			<div class="alert alert-{{ message_type}} alert-dismissable">
-				<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-				{{message}}
+	<form action="/search" id="search_form" method="post">
+		<div class="col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 search_bar">
+			<div class="input-group">
+				<input type="text" name="frm_search" id="frm_search" class="form-control input-lg" placeholder="Search the knowledge base">
+				<span class="input-group-btn">
+					<button class="btn btn-success btn-lg" id="btn_search" type="submit">Search</button>
+				</span>
 			</div>
 		</div>
-	{{/if}}
-	<form action="/search" method="post">
-	<div class="col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
-		<div class="input-group">
-  			<input type="text" name="frm_search" class="form-control input-lg" placeholder="Search the knowledge base">
-  			<span class="input-group-btn">
-    			<button class="btn btn-primary btn-lg" type="submit">Search</button>
-  			</span>
-		</div>
-	</div>
 	</form>
 </div>
 <div class="row">	
@@ -26,7 +18,25 @@
 				<div class="panel-body">
 					<ul class="list-group">
 						{{#each results}}
-							 <li class="list-group-item"><h5><a href="/kb/{{this._id}}">{{this.kb_title}}</a><span class="pull-right view_count">{{this.kb_viewcount}}</span></h5></li>
+							{{#if this.kb_permalink}}
+								<li class="list-group-item">
+									<h4>
+										<a href="/kb/{{this.kb_permalink}}">{{this.kb_title}}</a>
+										{{#if ../../config.settings.show_view_count}}
+												<span class="pull-right view_count">View count: {{view_count this.kb_viewcount}}</span>
+										{{/if}}
+									</h4>
+								</li>
+							{{else}}
+								<li class="list-group-item">
+									<h4>
+										<a href="/kb/{{this._id}}">{{this.kb_title}}</a>
+										{{#if ../../config.settings.show_view_count}}
+												<span class="pull-right view_count">View count: {{view_count this.kb_viewcount}}</span>
+										{{/if}}
+									</h4>
+								</li>
+							{{/if}}
 						{{/each}}
 					</ul>
 				</div>
@@ -38,16 +48,20 @@
 					<ul class="list-group">
 						{{#each top_results}}
 							 <li class="list-group-item">
-								 <h5>
-									<a href="/kb/{{this._id}}">{{this.kb_title}}</a>
+								 <h4>
+									{{#if kb_permalink}}
+										<a href="/kb/{{this.kb_permalink}}">{{this.kb_title}}</a>
+									{{else}}
+										<a href="/kb/{{this._id}}">{{this.kb_title}}</a>
+									{{/if}}
 
 									{{#if ../config.settings.show_view_count}}
-								 		<span class="pull-right view_count"><small>View count: {{this.kb_viewcount}}</span></small>
+								 		<span class="pull-right view_count">View count: {{view_count this.kb_viewcount}}</span>
 									{{/if}}
 									{{#if this.kb_password}}
-										<span class="pull-right view_count" style="padding-right: 5px;"><i class="fa fa-lock"></i></span>
+										<span class="pull-right view_count" style="padding-right: 5px;"><i class="fa fa-key"></i></span>
 									{{/if}}
-								 </h5>
+								 </h4>
 							 </li>
 						{{/each}}
 					</ul>
