--- a/views/suggest.hbs
+++ b/views/suggest.hbs
@@ -1,17 +1,11 @@
 <div class="col-md-10 col-md-offset-1">
 	<div class="row">
-		{{#if message}}
-			<div class="alert alert-{{ message_type}} alert-dismissable">
-				<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-				{{message}}
-			</div>
-		{{/if}}
 		<form method="post" id="edit_form" action="/insert_suggest">
 			<input type="hidden" name="frm_kb_id" value="{{result._id}}" />
 			<div id="header row">
 				<div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
 					<div class="form-group">
-						<label for="preview">Article title</label><br/>
+						<label for="preview">Article title *</label><br/>
 						<input type="text" name="frm_kb_title" class="form-control input-normal" minlength="5" maxlength="200" value="{{result.kb_title}}" required/>
 						<p class="help-block val-error"></p>
 					</div>
@@ -24,7 +18,7 @@
 			<div id="editor-pagewrapper row">
 				<div class="col-xs-12 col-md-6">
 					<div class="form-group" id="editor-wrapper">
-						<label for="editor">Article body (Markdown)</label>
+						<label for="editor">Article body (Markdown) *</label>
 						<textarea id="editor" minlength="5" name="frm_kb_body" class="form-control" required>{{{result.kb_body}}}</textarea>
 					</div>
 				</div>
@@ -46,7 +40,6 @@
 		</form>
 	</div>
 	{{#if editor}}
-		<script src="/javascripts/bootstrapTagger.js"></script>
 		<script src="/javascripts/markdown-it.min.js"></script>
 		<script src="/javascripts/markdown-editor.js"></script>
 	{{/if}}
