--- a/views/user_new.hbs
+++ b/views/user_new.hbs
@@ -1,12 +1,6 @@
 <div class="col-md-12">
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
-			{{#if message}}
-				<div class="alert alert-{{ message_type}} alert-dismissable">
-					<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-					{{message}}
-				</div>
-			{{/if}}
 			<ol class="breadcrumb">
 	  			<li><a href="/">Home</a></li>
 	 			<li><a href="/Users">Users</a></li>
@@ -31,7 +25,7 @@
 		  	</div>
 		  	<div class="form-group">
     			<div class="pull-right">
-      				<button type="submit" class="btn btn-primary">Update</button>
+      				<button type="submit" class="btn btn-primary">Create</button>
     			</div>
   			</div>
 		</div>
