--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -21,6 +21,7 @@
 		<script src="/javascripts/mermaid.min.js"></script>
 		<script src="/javascripts/markdown-it-classy.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tokenfield/0.12.0/bootstrap-tokenfield.min.js"></script>
+		<script src="/javascripts/jquery.inline-attachment.min.js"></script>
 		<script src="/javascripts/openKB.js"></script>
 	</head>
 	<body class="{{show_footer}}">	
